--- a/reference/OOPS.ipynb
+++ b/reference/OOPS.ipynb
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "cee37e21",
    "metadata": {},
    "outputs": [
@@ -969,20 +969,24 @@
     "    def __init__(self,name,price):\n",
     "        self.name = name\n",
     "        self.price = price\n",
+    "\n",
     "class Electronics(Product):\n",
     "    def __init__(self, name, price, warranty):\n",
     "     super().__init__(name,price)\n",
     "     self.warranty = warranty\n",
     "     print( f\"The product {self.name} costs {self.price} and have warranty up to {self.warranty} year \")\n",
+    "\n",
     "class  clothing(Product):\n",
     "   def __init__(self,name, price, size ):\n",
     "        super().__init__(name,price)\n",
     "        self.size =size \n",
     "        print( f\"the product {self.name} costs about {self.price} and the size is {self.size}\")\n",
+    "\n",
     "class Furniture(Product):\n",
     "   def __init__(self, material):\n",
     "        self.material = material\n",
     "        print (f\"the {self.material} is imported\")\n",
+    "        \n",
     "A1 = Electronics (\"sony headphone\",20000,2)\n",
     "A2 = clothing (\"CHROME HEARTS leather jacket\",45000,\"XL\")\n",
     "A3 = Furniture (\"sofa\")\n",
@@ -1532,6 +1536,76 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ddd9b3f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there is only vegetables and no chicken\n",
+      "there is only lamb chops and no carrots\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Shop:\n",
+    "    def __init__(self,veggies,meat):\n",
+    "        self.veggies = veggies\n",
+    "        self.meat = meat\n",
+    "        \n",
+    "    def show_details(self):\n",
+    "        return f\"there is only {self.veggies} and no {self.meat}\"\n",
+    "        \n",
+    "objector1 = Shop(\"vegetables\",\"chicken\")\n",
+    "objector2 = Shop(\"lamb chops\",\"carrots\")\n",
+    "print(objector1.show_details())\n",
+    "print(objector2.show_details())\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35c9c3d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a Bentley and its a 2012 model its fuel type is petrol\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle:\n",
+    "    def __init__(self,brand, model):\n",
+    "        self.brand = brand\n",
+    "        self.model = model\n",
+    "   \n",
+    "    def show_info(self):\n",
+    "        return f\"this is a{self.brand} and its a {self.model}\"\n",
+    "\n",
+    "class Car(Vehicle):\n",
+    "    def __init__(self,brand, model, fuel_type):\n",
+    "        super().__init__(brand, model)\n",
+    "        self.fuel_type = fuel_type\n",
+    "    \n",
+    "    def show_info (self):\n",
+    "        return f\"this is a {self.brand} and its a {self.model} model its fuel type is {self.fuel_type}\"\n",
+    "\n",
+    "objector1 = Car(\"Bentley\",2012,\"petrol\")\n",
+    "print(objector1.show_info())\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49b8b8a7",
    "metadata": {},
    "outputs": [],
    "source": []
