--- a/reference/OOPS.ipynb
+++ b/reference/OOPS.ipynb
@@ -1341,19 +1341,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7b942f8d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "addition: 9\n",
+      "subtraction: -1\n",
+      "product: 20\n",
+      "division: 0.8\n"
+     ]
     }
    ],
    "source": [
@@ -1362,7 +1362,7 @@
     "        self.a = a\n",
     "        self.b = b\n",
     "    def add(self):\n",
-    "        return self.a+ self.b\n",
+    "        return self.a+self.b\n",
     "    \n",
     "    def subtract(self):\n",
     "        return self.a-self.b\n",
@@ -1370,15 +1370,22 @@
     "    def multiply(self):\n",
     "        return self.a*self.b\n",
     "    \n",
-    "d1 = calculator(2,3)\n",
+    "    def division(self):\n",
+    "        return self.a / self.b\n",
+    "    \n",
+    "d1 = calculator(4,5)\n",
     "d1.subtract()\n",
     "d1.multiply()\n",
-    "d1.add()"
+    "d1.add()\n",
+    "print(\"addition:\",d1.add())\n",
+    "print(\"subtraction:\",d1.subtract())\n",
+    "print(\"product:\",d1.multiply())\n",
+    "print(\"division:\", d1.division())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f9053cc3",
    "metadata": {},
    "outputs": [
@@ -1394,56 +1401,6 @@
     }
    ],
    "source": [
-    "#Create a base class Employee with the following: 1.Attributes : emp_id, name, and private attribute __salary Methods :\n",
-    "\n",
-    "#a).set_salary(amount) → sets the salary (should not accept negative values)\n",
-    "#b). get_salary() → returns the salary\n",
-    "\n",
-    "#2.Create subclasses Developer and Manager with their own role attribute.\n",
-    "#3. Print each employee's name, role, and salary.\n",
-    "\n",
-    "class Employee:\n",
-    "    def __init__(self, emp_id, name, salary):\n",
-    "        self.emp_id = emp_id\n",
-    "        self.name = name\n",
-    "        self.__salary = salary\n",
-    "\n",
-    "    def set_salary(self,amount):\n",
-    "        if amount < 0 :\n",
-    "            print(\"value cannot be negative\")\n",
-    "        else:\n",
-    "            self.__salary = amount\n",
-    "    \n",
-    "    def get_salary(self):\n",
-    "        return self.__salary\n",
-    "\n",
-    "class Developer(Employee):\n",
-    "    def __init__(self, emp_id, name, salary, role):\n",
-    "        super().__init__(emp_id, name, salary)\n",
-    "        self.role = role\n",
-    "\n",
-    "    def show_details(self):\n",
-    "        return f\" name: {self.name}, role: {self.role} salary: {self.get_salary()}\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "class Manager(Employee):\n",
-    "    def __init__(self, emp_id, name, salary, role):\n",
-    "        super().__init__(emp_id,name,salary)\n",
-    "        self.role = role\n",
-    "    \n",
-    "    def show_details(self):\n",
-    "        return f\"name :{self.name}, role:{self.role} salary: {self.get_salary()}\"\n",
-    "\n",
-    "obj1 = Developer(7025,\"sidharth\",90000,\"AI Engineer\")\n",
-    "obj2 = Manager(997248,\"frida\", 120000,\"branch\")\n",
-    "print(obj1.show_details())\n",
-    "print(obj2.show_details())\n",
-    "obj1.set_salary(100000)\n",
-    "print(obj1.show_details())\n",
-    "obj2.set_salary(130000)\n",
-    "print(obj2.show_details())\n",
-    "\n",
     "\n",
     "    \n",
     "       "
@@ -1559,10 +1516,7 @@
     "objector1 = Shop(\"vegetables\",\"chicken\")\n",
     "objector2 = Shop(\"lamb chops\",\"carrots\")\n",
     "print(objector1.show_details())\n",
-    "print(objector2.show_details())\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(objector2.show_details())\n"
    ]
   },
   {
@@ -1597,18 +1551,152 @@
     "        return f\"this is a {self.brand} and its a {self.model} model its fuel type is {self.fuel_type}\"\n",
     "\n",
     "objector1 = Car(\"Bentley\",2012,\"petrol\")\n",
-    "print(objector1.show_info())\n",
-    "\n",
-    "\n"
+    "print(objector1.show_info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "49b8b8a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello sir how are you \n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet():\n",
+    "    print(\"hello sir how are you \")\n",
+    "greet()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49b8b8a7",
+   "id": "5b558a1a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "call rick\n"
+     ]
+    }
+   ],
+   "source": [
+    "def call():\n",
+    "    print(\"call rick\")\n",
+    "call()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b60b4cfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "-2\n",
+      "15\n",
+      "0.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "class calculator:\n",
+    "    def __init__(self, a,b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "    def add(self):\n",
+    "        return self.a + self.b\n",
+    "    \n",
+    "    def subtraction(self):\n",
+    "        return self.a - self.b\n",
+    "    \n",
+    "    def multiply(self):\n",
+    "        return self.a*self.b\n",
+    "    \n",
+    "    def division(self):\n",
+    "        return self.a/ self.b\n",
+    "    \n",
+    "calc = calculator(3,5)\n",
+    "calc.add()\n",
+    "calc.subtraction()\n",
+    "calc.multiply()\n",
+    "calc.division()\n",
+    "print(calc.add())\n",
+    "print(calc.subtraction())\n",
+    "print(calc.multiply())\n",
+    "print(calc.division())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ac22cf9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bank: working hours: 8, profit you should make : 36%, appraisal: 12000  \n",
+      "Employee: working hours: 10 , profit you made : 36%, appraisal: 12000, salary: 800000, OT: 4\n",
+      "Manager: working hours: 10 , profit you made : 40%, appraisal: 20000, salary: 120000, OT: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Bank:\n",
+    "    def __init__(self, wrkinghours, profit, appraisal):\n",
+    "        self.wrkinghours = wrkinghours\n",
+    "        self.profit = profit\n",
+    "        self.appraisal= appraisal\n",
+    "\n",
+    "    def set_appraisal(self,amount):\n",
+    "        if amount < 10000:\n",
+    "            print(\"upraisal to low\")\n",
+    "        else:\n",
+    "            self.appraisal = 10000\n",
+    "\n",
+    "    def show_details(self):\n",
+    "        return f\"working hours: {self.wrkinghours}, profit you should make : {self.profit}%, appraisal: {self.appraisal}  \"\n",
+    "\n",
+    "class Employee(Bank):\n",
+    "    def __init__(self, wrkinghours, profit, appraisal,salary,OT):\n",
+    "        super().__init__(wrkinghours,profit,appraisal)\n",
+    "        self.salary = salary\n",
+    "        self.OT = OT\n",
+    "\n",
+    "    def show_details(self):\n",
+    "            return f\"working hours: {self.wrkinghours} , profit you made : {self.profit}%, appraisal: {self.appraisal}, salary: {self.salary}, OT: {self.OT}\"\n",
+    "    \n",
+    "class Manager(Bank):\n",
+    "    def __init__(self,wrkinghours, profit, appraisal, salary,OT):\n",
+    "        super().__init__(wrkinghours, profit, appraisal)\n",
+    "        self.salary = salary\n",
+    "        self.OT = OT\n",
+    "            \n",
+    "    def show_details(self):\n",
+    "        return f\"working hours: {self.wrkinghours} , profit you made : {self.profit}%, appraisal: {self.appraisal}, salary: {self.salary}, OT: {self.OT}\"\n",
+    "    \n",
+    "object1 = Bank(8, 36, 12000)    \n",
+    "object2 = Employee(10,36,12000,800000, 4)\n",
+    "object3 = Manager(10,40,20000,120000,6)\n",
+    "object1.show_details()\n",
+    "print( \"Bank:\",object1.show_details())\n",
+    "print(\"Employee:\",object2.show_details())\n",
+    "print(\"Manager:\",object3.show_details())"
+   ]
   }
  ],
  "metadata": {
