--- a/reference/OOPS.ipynb
+++ b/reference/OOPS.ipynb
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "7b942f8d",
    "metadata": {},
    "outputs": [
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "040f8c7b",
    "metadata": {},
    "outputs": [
@@ -1484,9 +1484,7 @@
     "print(\"addition:\",objectr.add())\n",
     "print(\"subtraction:\",objectr.subtract())\n",
     "print(\"multiply:\",objectr.multiply())\n",
-    "print(\"division:\",objectr.division())\n",
-    "\n",
-    "    "
+    "print(\"division:\",objectr.division())"
    ]
   },
   {
@@ -1556,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "49b8b8a7",
    "metadata": {},
    "outputs": [
@@ -1571,7 +1569,7 @@
    "source": [
     "def greet():\n",
     "    print(\"hello sir how are you \")\n",
-    "greet()\n"
+    "greet()"
    ]
   },
   {
@@ -1591,12 +1589,12 @@
    "source": [
     "def call():\n",
     "    print(\"call rick\")\n",
-    "call()\n"
+    "call()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b60b4cfb",
    "metadata": {},
    "outputs": [
@@ -1636,7 +1634,7 @@
     "print(calc.add())\n",
     "print(calc.subtraction())\n",
     "print(calc.multiply())\n",
-    "print(calc.division())\n"
+    "print(calc.division())"
    ]
   },
   {
